# stock-assistant

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: errors.py  market.py  stream.py  symbols.py  watchlist.py
backend/app/core/: config.py  confluence.py  explain.py  fibonacci.py  level_backtest.py  level_calibration.json  levels.py  market.py  pivots.py  rth.py  trendlines.py  volume_profile.py
backend/app/core/data/: __init__.py  historical.py  quotes.py  stream.py  yahoo.py
backend/app/core/indicators/: __init__.py  momentum.py  trend.py  volatility.py  volume.py
backend/app/core/signal/: __init__.py  composite.py  subscores.py  vectorized.py  verdict.py
backend/app/services/: analytics.py  market_data.py  stream_hub.py  watchlist.py
backend/scripts/: calibrate_levels.py
backend/tests/: conftest.py  test_api.py  test_confluence.py  test_explain.py  test_fibonacci.py  test_level_backtest.py  test_levels.py  test_market.py  test_position_score.py  test_quotes.py  test_rth.py  test_stream_hub.py  test_trendline_segments.py  test_volume_profile.py  test_watchlist.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/analysis/: AnalysisPanel.tsx
frontend/components/chart/: CandleChart.tsx
frontend/components/ui/: GlossaryTip.tsx  (+7 more)
frontend/lib/: api.ts  bars.ts  glossary.ts  session.ts  theme.ts  timezone.ts
scripts/: capture_readme_screenshots.mjs
scripts/windows/: dev-backend.ps1  dev-frontend.ps1  setup.ps1  test.ps1
(+9 files in other folders)
